Post service, and DTOs added

--- a/Quacker.Web/Quacker.Web.csproj
+++ b/Quacker.Web/Quacker.Web.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="ViewComponents\" />
     <Folder Include="wwwroot\imgs\posts\1\" />
     <Folder Include="wwwroot\imgs\posts\3\" />
     <Folder Include="wwwroot\imgs\posts\4\" />
