--- a/Quacker.Web/appsettings.Development.json
+++ b/Quacker.Web/appsettings.Development.json
@@ -1,4 +1,11 @@
 {
+  "MailSettings": {
+    "Mail": "nia.fritsch54@ethereal.email",
+    "DisplayName": "Nia Fritsch",
+    "Password": "2Ev6AWrTAgdegRXpRx",
+    "Host": "smtp.ethereal.email",
+    "Port": 587
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
