--- a/Quacker.Web/appsettings.json
+++ b/Quacker.Web/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "Authentication": {
+    "Google": {
+      "ClientId": "786448034624-fej7ru200fh796fepjmabrroqkpdv404.apps.googleusercontent.com",
+      "ClientSecret": "oN-Nqbo0vJAwhqaMjUs2itYH"
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
