--- a/Quacker.Web/Properties/launchSettings.json
+++ b/Quacker.Web/Properties/launchSettings.json
@@ -1,10 +1,10 @@
-﻿{
+{
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:42429",
-      "sslPort": 44363
+      "applicationUrl": "http://localhost:22242",
+      "sslPort": 44302
     }
   },
   "profiles": {
@@ -18,10 +18,10 @@
     "Quacker.Web": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "https://localhost:5001;http://localhost:5000"
     }
   }
 }
