--- a/Quacker.Web/Quacker.Web.csproj
+++ b/Quacker.Web/Quacker.Web.csproj
@@ -9,7 +9,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="ViewComponents\" />
     <Folder Include="wwwroot\imgs\posts\1\" />
     <Folder Include="wwwroot\imgs\posts\3\" />
     <Folder Include="wwwroot\imgs\posts\4\" />
@@ -32,6 +31,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Humanizer.Core" Version="2.9.9" />
     <PackageReference Include="MailKit" Version="2.11.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="3.1.13" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.13" />
